@@ -1,6 +1,6 @@
 % File src/library/stats/man/aggregate.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2018 R Core Team
+% Copyright 1995-2022 R Core Team
 % Distributed under GPL 2 or later
 
 \name{aggregate}
@@ -17,7 +17,7 @@ aggregate(x, \dots)
 
 \method{aggregate}{data.frame}(x, by, FUN, \dots, simplify = TRUE, drop = TRUE)
 
-\method{aggregate}{formula}(formula, data, FUN, \dots,
+\method{aggregate}{formula}(x, data, FUN, \dots,
           subset, na.action = na.omit)
 
 \method{aggregate}{ts}(x, nfrequency = 1, FUN = sum, ndeltat = 1,
@@ -28,7 +28,10 @@ aggregate(x, \dots)
   and returns the result in a convenient form.
 }
 \arguments{
-  \item{x}{an R object.}
+  \item{x}{an \R object.  For the \code{formula} method a \code{\link{formula}},
+    such as \code{y ~ x} or \code{cbind(y1, y2) ~ x1 + x2}, where the
+    \code{y} variables are numeric data to be split into groups according
+    to the grouping \code{x} variables (usually factors).}
   \item{by}{a list of grouping elements, each as long as the variables
     in the data frame \code{x}.  The elements are coerced to factors
     before use.}
@@ -39,10 +42,6 @@ aggregate(x, \dots)
   \item{drop}{a logical indicating whether to drop unused combinations
     of grouping values.  The non-default case \code{drop=FALSE} has been
     amended for \R 3.5.0 to drop unused combinations.}
-  \item{formula}{a \link{formula}, such as \code{y ~ x} or
-    \code{cbind(y1, y2) ~ x1 + x2}, where the \code{y} variables are
-    numeric data to be split into groups according to the grouping
-    \code{x} variables (usually factors).}
   \item{data}{a data frame (or list) from which the variables in formula
     should be taken.}
   \item{subset}{an optional vector specifying a subset of observations
